changed hard codded math addition operation with js eval method

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h1>Math Quiz</h1>
                 <div class="nums">
                     <h1 class="num1">0</h1>
-                    <h3 class="mx-3">+</h3>
+                    <h3 class="mx-3 operand">+</h3>
                     <h1 class="num2">0</h1>
                 </div>
                 <input type="text" class="answer mt-3" placeholder="Answer"/>
