added a dropdown of operands

--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
     <div class="container" id="container">        
         <div class="quiz mt-5">
             <div class="quiz-contents">
-                <h1>Math Quiz</h1>
+                <h1>Math Quiz</h1>                
+                <select name="operand" id="operands">
+                    <option value="+">Addition</option>
+                    <option value="-">Subtraction</option>
+                    <option value="*">Multiplication</option>
+                    <option value="/">Division</option>
+                </select>
                 <div class="nums">
                     <h1 class="num1">0</h1>
                     <h3 class="mx-3 operand">+</h3>
